--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   dropdownfield: 1.0.0
   firebase_messaging: ^7.0.3
   overlay_support: ^1.0.5
+  http: ^0.12.2
+  table_calendar: ^2.3.2
 
 dev_dependencies:
   flutter_test:
