--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   overlay_support: ^1.0.5
   http: ^0.12.2
   table_calendar: ^2.3.2
-  shared_preferences: ^0.5.12+4
+#  shared_preferences: ^0.5.12+4
 
 dev_dependencies:
   flutter_test:
