--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   overlay_support: ^1.0.5
   http: ^0.12.2
   table_calendar: ^2.3.2
+  date_time_picker: ^1.1.0
 #  shared_preferences: ^0.5.12+4
 
 dev_dependencies:
