--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,9 +33,7 @@ dependencies:
   firebase_messaging: ^7.0.3
   overlay_support: ^1.0.5
   http: ^0.12.2
-  table_calendar: ^2.3.2
-  date_time_picker: ^1.1.0
-#  shared_preferences: ^0.5.12+4
+  syncfusion_flutter_calendar: ^18.4.31
 
 dev_dependencies:
   flutter_test:
@@ -55,6 +53,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/butterfly.jpg
+    - assets/file.db
+    - assets/task.db
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
