--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,9 +28,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
-  email_validator: ^1.0.6
   dropdownfield: 1.0.0
   firebase_messaging: ^7.0.3
+  firebase_auth: ^0.18.4+1
   overlay_support: ^1.0.5
   http: ^0.12.2
   syncfusion_flutter_calendar: ^18.4.31
