--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,12 +28,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
-  dropdownfield: 1.0.0
+#  dropdownfield: 1.0.0
   firebase_messaging: ^7.0.3
   firebase_auth: ^0.18.4+1
+  firebase_core: ^0.5.3
   overlay_support: ^1.0.5
   http: ^0.12.2
   syncfusion_flutter_calendar: ^18.4.31
+  cloud_firestore: ^0.14.4
 
 dev_dependencies:
   flutter_test:
