--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -63,4 +63,6 @@ dependencies {
     // When using the BoM, don't specify versions in Firebase dependencies
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-messaging:10.2.1'
+    implementation 'com.google.firebase:firebase-auth'
+
 }
