--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   overlay_support: ^1.0.5
   http: ^0.12.2
 #  provider: ^4.3.2+3
+  shared_preferences: ^0.5.12+4
   syncfusion_flutter_calendar: ^18.4.31
   cloud_firestore: ^0.14.4
 
