video player done, drawer for routes ongoing

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   shared_preferences: ^0.5.12+4
   syncfusion_flutter_calendar: ^18.4.31
   cloud_firestore: ^0.14.4
+  video_player: ^1.0.1
 
 dev_dependencies:
   flutter_test:
